--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,12 @@
 </head>
 <body>
     
+    <main>
+        <div class="services">
+            <h2>Our Services</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nihil veniam incidunt molestiae praesentium quis porro error ratione.</p>
+        </div>
+    </main>
 
-    
 </body>
 </html>
