--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
+    <header class="header">
+        g
+        <nav>
+            <ul class="menu">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Works</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
+    </header>
     
 
     
