Texto do banner alinhado

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <main>
         <div class="container banner">
+            <h1>Welcome</h1>
+            <div class="center">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsum accusantium reprehenderit nesciunt, quidem iusto nisi</p>
+            </div>
+        </div>
     </main>   
 </body>
 </html>
