--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <div class="center">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ipsum accusantium reprehenderit nesciunt, quidem iusto nisi</p>
             </div>
+            <div class="contato">
+                <a href="#">Contact Us</a>
+            </div>
         </div>
     </main>   
 </body>
