ajustes do container e textos alinhados com o display flex

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
+    <div class="container">
     <header class="header">
-        g
+        <img src="images/logo.png" alt="logo do site">
         <nav>
             <ul class="menu">
               <li><a href="#">Home</a></li>
@@ -20,7 +21,7 @@
         </nav>
 
     </header>
-    
+    </div>
 
     
 </body>
