--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
     
     <main>
         <div class="services">
-            <h2>Our Services</h2>
+                <h2>Our Services</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nihil veniam incidunt molestiae praesentium quis porro error ratione.</p>
+            <div class="articles">
+        <article class="data">
+            <img src="images/dado1.png" alt="imagem ilustrativa de gráfico de pizza">
+            <h3>Service 1</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nihil veniam incidunt molestiae praesentium quis porro error ratione.</p>
+        </article>
+        <article class="data">
+            <img src="images/dado2.png" alt="imagem ilustrativa de gráfico de pizza">
+            <h3>Service 2</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nihil veniam incidunt molestiae praesentium quis porro error ratione.</p>
+        </article>
+        <article class="data">
+            <img src="images/dado3.png" alt="imagem ilustrativa de gráfico de pizza">
+            <h3>Service 3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nihil veniam incidunt molestiae praesentium quis porro error ratione.</p>
+        </article>
+    </div>
         </div>
     </main>
 
